# pyopencode

./: .gitignore  .pre-commit-config.yaml  2026-04-05-075328-STOP.txt  AGENT.md  BUGFIX_REPORT.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DEMO_CHECKLIST.md  DEMO_RESULTS.md  DEMO_SUMMARY.md  IMPLT.md  LICENSE  PHASE2_TEST_REPORT.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SGGT.md  TASK.md  config.info.example.py  pyproject.toml  test_phase2_e2e.py
.github/: dependabot.yml
.github/workflows/: ci.yml
pyopencode/: __init__.py  __main__.py  auth_login.py  cli_entry.py  config.py  main.py
pyopencode/core/: agent_loop.py  compaction.py  router.py  subagent.py
pyopencode/llm/: client.py  providers.py  token_counter.py
pyopencode/memory/: agent_md.py  repomap.py  session.py
pyopencode/tools/: bash.py  dispatch_subagent.py  edit_file.py  git_tools.py  glob_search.py  grep_search.py  lsp_bridge.py  lsp_session.py  lsp_tool.py  mcp_bridge.py  mcp_session.py  mcp_tool.py  permissions.py  read_file.py  registry.py  repomap_tool.py  todo_write.py  tool_runtime.py  write_file.py
pyopencode/tui/: app.py  chat_view.py  entry.py  help_modal.py  install_hint.py  permission_modal.py  status_bar.py
pyopencode/utils/: bash_policy.py  diff.py  project_detect.py  truncate.py
tests/: test_agent_loop.py  test_bash_policy.py  test_compaction.py  test_llm_client.py  test_lsp_bridge.py  test_lsp_integration.py  test_lsp_tool.py  test_main_cli.py  test_mcp_tool.py  test_phase3.py  test_session_agent_loop.py  test_tools.py  test_tui_app.py  test_ultrawork.py
