[project]
name = "pyopencode"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "litellm>=1.40",
]

[project.scripts]
pyopencode = "pyopencode.main:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.9.5",
]
tui = ["textual>=0.50"]
lsp = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyopencode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires external tools (e.g. pyright-langserver); opt-in via env",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
]
