[project]
name = "pyopencode"
version = "0.1.0"
description = "Lightweight terminal AI coding agent (Claude, GPT, Gemini, Qwen, SiliconFlow)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "litellm>=1.40",
]

[project.scripts]
pyopencode = "pyopencode.main:main"

[project.urls]
Changelog = "https://github.com/chenhaodev/pyopencode/blob/main/CHANGELOG.md"
Homepage = "https://github.com/chenhaodev/pyopencode"
Repository = "https://github.com/chenhaodev/pyopencode"
Roadmap = "https://github.com/chenhaodev/pyopencode/blob/main/ROADMAP.md"

[project.optional-dependencies]
dev = [
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.9.5",
    "textual==8.2.2",
]
tui = ["textual>=0.50"]
lsp = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyopencode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires external tools (e.g. pyright-langserver); opt-in via env",
    "tui: Textual Pilot tests (needs textual; included in dev extras)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
]
