[project]
name = "pyopencode"
version = "0.1.0"
description = "Terminal AI coding agent: OpenCode-style minimal core + Claude Code-style workflow (Claude, GPT, Gemini, Qwen, SiliconFlow)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "litellm>=1.83.4",
]

[project.scripts]
pyopencode = "pyopencode.main:main"

[project.urls]
Changelog = "https://github.com/chenhaodev/pyopencode/blob/main/CHANGELOG.md"
Homepage = "https://github.com/chenhaodev/pyopencode"
Repository = "https://github.com/chenhaodev/pyopencode"
Roadmap = "https://github.com/chenhaodev/pyopencode/blob/main/ROADMAP.md"

[project.optional-dependencies]
dev = [
    "pre-commit==4.5.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "ruff==0.9.5",
    "textual==8.2.2",
]
tui = ["textual>=0.50"]
repomap = [
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.9.0",
]
lsp = [
    "pygls>=1.3.0",
]
# MCP stdio client uses stdlib only; extra exists for docs / future SDK pins.
mcp = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyopencode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires external tools (e.g. pyright-langserver); opt-in via env",
    "tui: Textual Pilot tests (needs textual; included in dev extras)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
]
